--- a/02-web-server/nginx.conf
+++ b/02-web-server/nginx.conf
@@ -1,34 +1,44 @@
-```nginx
 server {
     listen 80;
-    server_name example.com www.example.com;
+    server_name localhost;
 
-    # Redirect HTTP to HTTPS (Best Practice)
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl http2;
-    server_name example.com;
-
-    # SSL Certificates (Placeholders)
-    ssl_certificate /etc/ssl/certs/example.crt;
-    ssl_certificate_key /etc/ssl/private/example.key;
-
-    # Root Directory for Static Files
+    # Root Directory for Static Files (e.g., your HTML portfolio)
     root /var/www/html;
     index index.html;
 
-    # Reverse Proxy Block (e.g., forwarding to a Node/Python app)
+    # 1. Main Location Block (Serving Static Files)
+    location / {
+        # Tries to serve the file requested, otherwise returns a 404 error
+        try_files $uri $uri/ =404;
+    }
+
+    # 2. Reverse Proxy Example (The DevOps "Bridge")
+    # This demonstrates how to forward traffic to a backend app (like Node.js or Python)
+    # running on a different port (e.g., 3000).
     location /api/ {
         proxy_pass http://localhost:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # Error Pages
+    # 3. Security Best Practice: Hide Nginx Version
+    # Prevents hackers from seeing exactly which version you are running.
+    server_tokens off;
+
+    # 4. Custom Error Pages
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
     }
+
+    # --- PRODUCTION SETTINGS (Needs SSL Certs to run, uncomment when SSL certs are present) ---
+    # listen 443 ssl;
+    # ssl_certificate /etc/ssl/certs/server.crt;
+    # ssl_certificate_key /etc/ssl/private/server.key;
+    # 
+    # Redirect HTTP to HTTPS
+    # if ($scheme != "https") {
+    #     return 301 https://$host$request_uri;
+    # }
 }
